# pywpsrpc

./: .gitignore  .gitmodules  .travis.yml  AGENTS.md  LICENSE  README.md  README_en.md  __init__.py  build.sh  configure.py  project.py  pyproject.toml  test_rpcwpsapi.py  test_wpsapi.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
examples/: README.md
examples/rpcetapi/: README.md  et_convert.py
examples/rpcwppapi/: README.md  wpp_convert.py
include/: pyevents.h
include/common/: comdef.h  guiddef.h  int.h  mso_enum.h  mso_enum_chart.h  oaidl.h  objbase.h  objidl.h  oleauto.h  pre_platform.h  pre_stddef.h  pre_stdlib.h  typedef.h  variant.h  winnt.h  winuser.h  wpsapiex.h  wpsrpcsdk.h
include/et/: etapi.h
include/wpp/: wppapi.h
include/wps/: wpsapi.h
py/: __init__.py  utils.py
sip/common/: common.sip  export.sip  guid.sip  ksoapi.sip  oaidl.sip  objbase.sip  objidl.sip  typedef.sip  wpsapiex.sip  wpsrpcsdk.sip
sip/etapi/: configure.py  etapi.sip
sip/rpcetapi/: AboveAverage.sip  Action.sip  Actions.sip  AddIn.sip  AddIns.sip  AddIns2.sip  Adjustments.sip  AllowEditRange.sip  AllowEditRanges.sip  AppEvents.sip  Arc.sip  Arcs.sip  Areas.sip  AutoCorrect.sip  AutoFilter.sip  AutoRecover.sip  Axes.sip  Axis.sip  AxisTitle.sip  Border.sip  Borders.sip  Button.sip  Buttons.sip  CalculatedFields.sip  CalculatedItems.sip  CalculatedMember.sip  CalculatedMembers.sip  CalloutFormat.sip  CategoryCollection.sip  CellFormat.sip  Characters.sip  ChartArea.sip  ChartCategory.sip  ChartColorFormat.sip  ChartEvents.sip  ChartFillFormat.sip  ChartFormat.sip  ChartGroup.sip  ChartGroups.sip  ChartObject.sip  (+668 more)
sip/rpcwppapi/: ActionSetting.sip  ActionSettings.sip  AddIn.sip  AddIns.sip  Adjustments.sip  AnimationBehavior.sip  AnimationBehaviors.sip  AnimationPoint.sip  AnimationPoints.sip  AnimationSettings.sip  AutoCorrect.sip  Axes.sip  Axis.sip  AxisTitle.sip  Borders.sip  Broadcast.sip  BulletFormat.sip  CalloutFormat.sip  CanvasShapes.sip  CategoryCollection.sip  Cell.sip  CellRange.sip  Chart.sip  ChartArea.sip  ChartBorder.sip  ChartCategory.sip  ChartCharacters.sip  (+181 more)
tests/: test_iter.py  test_property.py  test_rpcetapi.py  test_rpcevents.py  test_rpcproxy.py  test_rpcwppapi.py  test_rpcwpsapi.py
(+699 files in other folders)
