[build-system]
requires = ["sip >=6"]
build-backend = "sipbuild.api"

[project]
name = "pywpsrpc"
version = "2.3.9"
description = "Python bindings for the WPS Office RPC"
readme = "README.md"
authors = [
    { name = "Weitian Leung", email = "weitianleung@gmail.com" }
]
license = "MIT"
homepage = "https://github.com/timxx/pywpsrpc"
keywords = ["WPS Office", "RPC", "Python bindings"]
platform = "Linux"
tool.sip.project.sdist-excludes = [
    ".gitignore", ".travis.yml", "*.tar.gz",
    ".git/*", ".git/*/*", ".git/*/*/*", ".git/*/*/*/*",
    ".git/*/*/*/*/*", ".git/*/*/*/*/*/*", ".git/*/*/*/*/*/*/*",
    ".github/*/*", ".vscode/*", ".gitmodules", "wpsrpc-sdk/.git",
    "build/*", "build/*/*", "build/*/*/*", "build/.*"
]
